--- a/flower/pom.xml
+++ b/flower/pom.xml
@@ -107,6 +107,11 @@
       <artifactId>jackson-annotations</artifactId>
       <version>0.66.0.1</version>
     </dependency>
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>1.2.47</version>
+    </dependency>
   </dependencies>
 
   <build>
